--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .navbar {
@@ -20,6 +20,18 @@
   font-size: small;
   gap: 30px;
   margin-top: 17px;
+}
+
+.heroSection {
+  background-image: url("img/Hero section bg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  bottom: 3%;
+  top: 3%;
 }
 
 .buttons {
@@ -85,13 +97,13 @@
   width: 76%;
   background: white;
   border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
 }
 
 .item {
   display: flex;
   align-items: center;
-  gap: 12px;  /* icon aur text ka gap */
+  gap: 12px;
 }
 
 .item img {
@@ -134,6 +146,15 @@
 }
 
 .howItWork {
+  background-image: url("img/How it work.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+}
+
+.howItWork {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -149,21 +170,23 @@
   align-items: center;
   justify-content: center;
   font-size: 8px;
-  background-color: lightgray;
+  background-color: #e8f1fb;
   color: blue;
+  font-weight: 400;
   border-radius: 5px;
 }
 
 .howItWork h5 {
   font-size: 32px;
-  font-weight: 500;
+  font-weight: 540;
 }
 
 .centeropts {
   display: flex;
-  gap: 40px;
+  gap: 50px;
   align-items: flex-start;
   justify-content: center;
+  margin-top: 50px;
 }
 
 .centeropts > div {
@@ -188,13 +211,16 @@
   margin-top: 4px;
 }
 
+.centeropts .text {
+  text-align: center;
+}
+
 .slider {
   width: 100%;
   overflow: hidden;
   padding: 20px 0;
-  position: absolute;
-  bottom: 8%;
-  left: 0;
+  position: relative;
+  margin-top: 100px;
 }
 
 .marqueImgs img {
@@ -215,3 +241,67 @@
   margin: 0 30px;
   object-fit: contain;
 }
+
+.whyChooseUs {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-image: url("img/Why choose us.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+}
+
+.rightContent {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 35%;
+  position: relative;
+  bottom: 0;
+  right: 7%;
+}
+
+.why {
+  height: 7%;
+  width: 25%;
+  padding: 6px 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 8px;
+  background-color: #e8f1fb;
+  color: blue;
+  font-weight: 400;
+  border-radius: 5px;
+}
+
+.rightContent h5 {
+  font-size: 32px;
+  font-weight: 540;
+}
+
+.rightopts {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 75%;
+  margin-top: 20px;
+}
+
+.why_items img {
+  width: 45px;
+  height: 45px;
+  grid-area: 10px;
+}
+
+.why_items {
+  gap: 15px;
+}
+
+.why_text {
+  width: 75%;
+}
+
