--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   margin: 0%;
   padding: 0%;
@@ -56,7 +58,7 @@
 
 .findText {
   height: 30%;
-  width: 24%;
+  width: 28%;
   position: absolute;
   top: 26%;
   left: 13%;
@@ -70,9 +72,10 @@
 }
 
 .findText p {
-  margin-top: 10px;
-  font-size: 16px;
+  margin-top: 15px;
+  font-size: 17px;
   line-height: 1.5;
+  color: rgb(60, 60, 60);
 }
 
 .findText span {
@@ -80,10 +83,15 @@
 }
 
 .linkImgs {
-  height: 15%;
-  margin-top: 20px;
   display: flex;
   gap: 15px;
+  margin-top: 20px;
+}
+
+.linkImgs img {
+  width: 120px;
+  height: auto;
+  cursor: pointer;
 }
 
 .bottomNav {
@@ -152,6 +160,9 @@
   background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
+  position: relative;
+  bottom: 3%;
+  top: 3%;
 }
 
 .howItWork {
@@ -252,6 +263,9 @@
   background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
+  position: relative;
+  bottom: 3%;
+  top: 3%;
 }
 
 .rightContent {
@@ -305,3 +319,287 @@
   width: 75%;
 }
 
+.popularDeals {
+  background-image: url("img/Popular rental deals.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  bottom: 3%;
+  top: 3%;
+  display: flex;
+  justify-content: center;
+}
+
+.popularDeals .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.popular {
+  height: auto;
+  padding: 8px 18px;
+  font-size: 8px;
+  background-color: #e8f1fb;
+  color: blue;
+  font-weight: 500;
+  border-radius: 6px;
+  margin-bottom: 15px;
+}
+
+.popularDeals h5 {
+  font-size: 40px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.carCards {
+  display: flex;
+  justify-content: center;
+}
+
+.carImgs {
+  width: 22%;
+  height: auto;
+}
+
+.carImgs img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.showMore {
+  display: flex;
+  align-items: center;
+  border: 1px solid #c9c9c9;
+  background-color: transparent;
+  border-radius: 6px;
+  padding: 8px 30px;
+  margin-bottom: 50px;
+  font-size: 15px;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.showMore img {
+  width: 25px;
+  height: 25px;
+}
+
+.whatPeopleSay {
+  background-image: url("img/What people say.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  bottom: 3%;
+  top: 3%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 50px;
+}
+
+.people {
+  height: auto;
+  padding: 8px 18px;
+  font-size: 8px;
+  background-color: #e8f1fb;
+  color: blue;
+  font-weight: 500;
+  border-radius: 6px;
+  margin-top: 50px;
+  margin-bottom: 15px;
+}
+
+.whatPeopleSay h5 {
+  font-size: 32px;
+  font-weight: 540;
+}
+
+.peopleImgs {
+  width: 100%;
+  overflow: hidden;
+}
+
+.peopleImgs img {
+  height: 60vh;
+  object-fit: contain;
+  margin: 30px 0;
+}
+
+.downloadApp {
+  background-image: url("img/Download app.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 60vh;
+  position: relative;
+
+  display: flex;
+  align-items: center;
+}
+
+.leftContent {
+  width: 35%;
+  margin-left: 10%;
+  display: flex;
+  flex-direction: column;
+}
+
+.download {
+  padding: 8px 15px;
+  font-size: 10px;
+  background-color: #d8eaff;
+  color: blue;
+  font-weight: 600;
+  border-radius: 6px;
+  width: 20%;
+}
+
+.downloadText {
+  margin-top: 15px;
+  color: black;
+}
+
+.downloadText h1 {
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.downloadText span {
+  color: blue;
+}
+
+.downloadText p {
+  margin-top: 15px;
+  font-size: 17px;
+  line-height: 1.5;
+  color: rgb(60, 60, 60);
+}
+
+.downloadImgs {
+  display: flex;
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.downloadImgs img {
+  width: 150px;
+  height: auto;
+  cursor: pointer;
+}
+
+.footer {
+  width: 100%;
+  background-color: #061c37;
+  color: #d3d7df;
+  padding: 50px 70px 25px;
+  font-family: Arial, sans-serif;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+.footer-col.company img.footer-logo {
+  width: 140px;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.footer-info {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+.footer-info .item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.footer-info .item img {
+  width: 18px;
+  height: 18px;
+  object-fit: contain;
+  margin-bottom: 10px;
+}
+
+.footer-info .item p {
+  margin: 0;
+  font-size: 14px;
+  color: #d3d7df;
+  line-height: 1.4;
+}
+
+.footer-col h3 {
+  font-size: 17px;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.footer-col ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-col ul li {
+  margin-bottom: 8px;
+}
+
+.footer-col ul li a {
+  text-decoration: none;
+  color: #d3d7df;
+  font-size: 14px;
+}
+
+.footer-col ul li a:hover {
+  color: white;
+}
+
+.company .logo {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.company .footer-info p {
+  margin-bottom: 10px;
+  font-size: 15px;
+  line-height: 1.5;
+}
+
+.follow .icons i {
+  font-size: 18px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.follow .icons i:hover {
+  color: white;
+}
+
+hr {
+  border: 0;
+  border-top: 1px solid #2e3d50;
+  margin: 40px 0 15px;
+}
+
+.footer-bottom {
+  text-align: center;
+  font-size: 14px;
+  color: #b3bac8;
+}
